fixed missing text-align

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -202,6 +202,7 @@
 .post-meta {
   font-size: $small-font-size;
   color: $grey-color;
+  text-align: center;
 }
 
 .post-link {
